[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/bulletRed1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/tiro.gd" type="Script" id=2]
[ext_resource path="res://scenes/fumaca.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/explosion1.png" type="Texture" id=4]
[ext_resource path="res://sprites/explosionSmoke4.png" type="Texture" id=5]
[ext_resource path="res://sprites/explosionSmoke5.png" type="Texture" id=6]
[ext_resource path="res://sprites/explosionSmoke3.png" type="Texture" id=7]
[ext_resource path="res://sprites/explosionSmoke2.png" type="Texture" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.02275
height = 6.16457

[sub_resource type="Animation" id=2]
resource_name = "destroindose"
length = 0.6
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("destroi:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0980451, 0.20355, 0.299109, 0.402127 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("destroi:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.502127 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="tiro" type="Area2D" groups=[
"balas_canhao",
]]
gravity_vec = Vector2( 0, 0 )
collision_layer = 8
collision_mask = 38
script = ExtResource( 2 )

[node name="tiro_sprite" type="Sprite" parent="."]
position = Vector2( -0.124252, -0.536091 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="colisor" type="CollisionShape2D" parent="."]
position = Vector2( -0.10511, -0.52556 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="area_notificacao" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.0525539, -0.630672 )
rotation = 1.5708
scale = Vector2( 0.206404, 0.495462 )

[node name="fumaca" parent="." instance=ExtResource( 3 )]

[node name="destroi" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -0.561231 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )

[node name="anim_destroi" type="AnimationPlayer" parent="."]
anims/destroindose = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_tiro_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_tiro_body_entered"]
[connection signal="screen_exited" from="area_notificacao" to="." method="_on_area_notificacao_screen_exited"]
